--- a/ui/controls/button-group.reel/button-group.html
+++ b/ui/controls/button-group.reel/button-group.html
@@ -21,7 +21,7 @@
             }
         },
         "option": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "option"}
             },
