--- a/ui/controls/disk-selector.reel/disk-selector.html
+++ b/ui/controls/disk-selector.reel/disk-selector.html
@@ -13,7 +13,7 @@
             }
         },
         "name": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "name"}
             },
