--- a/ui/controls/inspector-section-title.reel/inspector-section-title.html
+++ b/ui/controls/inspector-section-title.reel/inspector-section-title.html
@@ -11,7 +11,7 @@
             }
         },
         "title": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "title"}
             },
@@ -20,7 +20,7 @@
             }
         },
         "subtitle": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "subtitle"}
             },
