--- a/ui/controls/interface-overview.reel/interface-overview.html
+++ b/ui/controls/interface-overview.reel/interface-overview.html
@@ -21,7 +21,7 @@
             }
         },
         "media_type": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "media_type"}
             },
@@ -30,7 +30,7 @@
             }
         },
         "name": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "name"}
             },
