--- a/ui/controls/topology.reel/topology-item.reel/topology-item.html
+++ b/ui/controls/topology.reel/topology-item.reel/topology-item.html
@@ -16,7 +16,7 @@
             "prototype": "montage/core/converter/bytes-converter"
         },
         "name": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "name"}
             },
@@ -25,7 +25,7 @@
             }
         },
         "usableSize": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "usableSize"},
                 "converter": {"@": "bytesConverter"}
