--- a/ui/dashboard/notifications.reel/notification-details.reel/alert-notification-details.reel/alert-notification-details.html
+++ b/ui/dashboard/notifications.reel/notification-details.reel/alert-notification-details.reel/alert-notification-details.html
@@ -15,7 +15,7 @@
             }
         },
         "jobId": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "jobId"}
             },
@@ -24,7 +24,7 @@
             }
         },
         "taskName": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "taskName"}
             },
@@ -33,7 +33,7 @@
             }
         },
         "description": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "description"}
             },
