--- a/ui/dashboard/notifications.reel/notifications.html
+++ b/ui/dashboard/notifications.reel/notifications.html
@@ -37,7 +37,7 @@
             }
         },
         "emptyState": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "emptyState"}
             },
