--- a/ui/dashboard/widgets/widget-icon.reel/widget-icon.html
+++ b/ui/dashboard/widgets/widget-icon.reel/widget-icon.html
@@ -18,7 +18,7 @@
             }
         },
         "count": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "count"}
             },
