--- a/ui/drawer.reel/drawer-item.reel/drawer-item.html
+++ b/ui/drawer.reel/drawer-item.reel/drawer-item.html
@@ -10,7 +10,7 @@
             }
         },
         "title": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "title"}
             },
@@ -19,7 +19,7 @@
             }
         },
         "description": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "description"}
             },
