--- a/ui/inspectors/calendar.reel/calendar-list.reel/calendar-list-day.reel/calendar-list-day.html
+++ b/ui/inspectors/calendar.reel/calendar-list.reel/calendar-list-day.reel/calendar-list-day.html
@@ -16,7 +16,7 @@
             }
         },
         "date": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "date"}
             },
