--- a/ui/inspectors/calendar.reel/calendar-list.reel/calendar-list-item.reel/calendar-list-item.html
+++ b/ui/inspectors/calendar.reel/calendar-list.reel/calendar-list-item.reel/calendar-list-item.html
@@ -27,7 +27,7 @@
             }
         },
         "title": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "title"}
             },
@@ -36,7 +36,7 @@
             }
         },
         "time": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "time"}
             },
