--- a/ui/inspectors/calendar.reel/calendar-list.reel/calendar-list.html
+++ b/ui/inspectors/calendar.reel/calendar-list.reel/calendar-list.html
@@ -35,7 +35,7 @@
             }
         },
         "emptyMessage": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "emptyMessage"},
                 "value": "No tasks to display. Change the display filter or create a new task above."
