--- a/ui/inspectors/calendar.reel/calendar-widget.reel/day-header.reel/day-header.html
+++ b/ui/inspectors/calendar.reel/calendar-widget.reel/day-header.reel/day-header.html
@@ -14,7 +14,7 @@
             }
         },
         "day": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "day"}
             },
