--- a/ui/inspectors/calendar.reel/calendar-widget.reel/day-view.reel/day-view.html
+++ b/ui/inspectors/calendar.reel/calendar-widget.reel/day-view.reel/day-view.html
@@ -22,7 +22,7 @@
             }
         },
         "hour": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "hour"}
             },
@@ -53,7 +53,7 @@
             }
         },
         "GMT": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "GMT"}
             },
