--- a/ui/inspectors/calendar.reel/calendar-widget.reel/month-view.reel/month-view.html
+++ b/ui/inspectors/calendar.reel/calendar-widget.reel/month-view.reel/month-view.html
@@ -53,7 +53,7 @@
             }
         },
         "dayOfTheWeek": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "dayOfTheWeek"}
             },
