--- a/ui/inspectors/calendar.reel/calendar-widget.reel/week-view.reel/week-view.html
+++ b/ui/inspectors/calendar.reel/calendar-widget.reel/week-view.reel/week-view.html
@@ -62,7 +62,7 @@
             }
         },
         "hour": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "hour"}
             },
@@ -71,7 +71,7 @@
             }
         },
         "GMT": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "GMT"}
             },
