--- a/ui/inspectors/calendar.reel/calendar.html
+++ b/ui/inspectors/calendar.reel/calendar.html
@@ -36,7 +36,7 @@
             }
         },
         "GMT": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "GMT"}
             },
