--- a/ui/inspectors/service.reel/service-overview.reel/service-overview.html
+++ b/ui/inspectors/service.reel/service-overview.reel/service-overview.html
@@ -41,7 +41,7 @@
             }
         },
         "serviceType": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "serviceType"}
             },
