--- a/ui/inspectors/services-category.reel/services-category-overview.reel/services-category-overview.html
+++ b/ui/inspectors/services-category.reel/services-category-overview.reel/services-category-overview.html
@@ -30,7 +30,7 @@
             }
         },
         "servicesType": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "servicesType"}
             },
@@ -39,7 +39,7 @@
             }
         },
         "servicesCount": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "servicesCount"}
             },
@@ -48,7 +48,7 @@
             }
         },
         "actives": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "actives"}
             },
