--- a/ui/sections/network/inspectors/overview.reel/interface-overview-item.reel/interface-overview-item.html
+++ b/ui/sections/network/inspectors/overview.reel/interface-overview-item.reel/interface-overview-item.html
@@ -22,7 +22,7 @@
             ]
         },
         "interfaceName": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "interfaceName"}
             },
@@ -31,7 +31,7 @@
             }
         },
         "firstAddress": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "firstAddress"}
             },
@@ -49,7 +49,7 @@
             }
         },
         "interfaceIpv4": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "interfaceIpv4"}
             },
