--- a/ui/sections/storage/inspectors/overview.reel/volume-overview-item.reel/volume-overview-item.html
+++ b/ui/sections/storage/inspectors/overview.reel/volume-overview-item.reel/volume-overview-item.html
@@ -23,7 +23,7 @@
             "prototype": "montage/core/converter/bytes-converter"
         },
         "name": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "name"}
             },
@@ -32,7 +32,7 @@
             }
         },
         "size": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "size"},
                 "converter": {"@": "bytesConverter"}
