--- a/ui/sections/storage/inspectors/share.reel/share-overview.reel/share-overview.html
+++ b/ui/sections/storage/inspectors/share.reel/share-overview.reel/share-overview.html
@@ -19,7 +19,7 @@
             }
         },
         "shareType": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "shareType"}
             },
