--- a/ui/sections/storage/inspectors/volume.reel/volume.html
+++ b/ui/sections/storage/inspectors/volume.reel/volume.html
@@ -28,7 +28,7 @@
         },
 
         "size": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "size"},
                 "converter": {"@": "bytesConverter"}
@@ -160,6 +160,13 @@
             "bindings": {
                 "classList.has('hide')": {"<-": "!!@owner.upgraded"}
             }
+        },
+        "capacityLabel": {
+            "prototype": "blue-shark/ui/text.reel",
+            "properties": {
+                "element": {"#": "capacityLabel"},
+                "value": "Capacity"
+            }
         }
     }
     </script>
@@ -170,7 +177,7 @@
             <div data-montage-id="volumeIcon" class="Volume-header-icon"></div>
             <div class="Volume-header-info">
                 <div data-montage-id="size" class="Volume-header-diskSize"></div>
-                <small class="flush-bottom">Capacity</small>
+                <small data-montage-id="capacityLabel" class="flush-bottom"></small>
             </div>
         </div>
         <div data-montage-id="allocationBar" class="Volume-allocationBar"></div>
