--- a/ui/sections/system/inspectors/boot-pool.reel/boot-environment-row.reel/boot-environment-row.html
+++ b/ui/sections/system/inspectors/boot-pool.reel/boot-environment-row.reel/boot-environment-row.html
@@ -25,7 +25,7 @@
         },
 
         "active": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "active"}
             },
@@ -45,7 +45,7 @@
         },
 
         "dateCreated": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "dateCreated"}
             },
