--- a/ui/sections/system/inspectors/language-and-region.reel/language-and-region.html
+++ b/ui/sections/system/inspectors/language-and-region.reel/language-and-region.html
@@ -7,8 +7,7 @@
     {
         "owner": {
             "properties": {
-                "element": {"#": "owner"},
-                "dateConverter": {"@": "dateConverter"}
+                "element": {"#": "owner"}
             }
         },
         "validationController": {
@@ -162,15 +161,6 @@
             "properties": {
                 "element": {"#": "dateFormatTitle"},
                 "value": "Date Format"
-            }
-        },
-        "dateConverter": {
-            "prototype": "montage/core/converter/date-converter"
-        },
-        "timeConverter": {
-            "prototype": "montage/core/converter/date-converter",
-            "properties": {
-                "pattern": "T"
             }
         },
         "timeFormatTitle": {
