--- a/ui/widgets/cpu-temperature.reel/cpu-temperature.html
+++ b/ui/widgets/cpu-temperature.reel/cpu-temperature.html
@@ -12,14 +12,8 @@
         "widget": {
             "prototype": "ui/dashboard/widgets/widget.reel",
             "properties": {
-                "element": {"#": "widget"}
-            }
-        },
-        "text": {
-            "prototype": "montage/ui/text.reel",
-            "properties": {
-                "element": {"#": "title"},
-                "value": "CPU Temperature"
+                "element": {"#": "widget"},
+                "title": "CPU Temperature"
             }
         },
         "chart": {
@@ -47,10 +41,7 @@
 <body>
     <div data-montage-id="owner" class="CpuTemperature">
         <div data-montage-id="widget">
-            <div data-arg="widget-title">
-                <svg><use xlink:href="#i-barChart"/></svg>
-                <div data-montage-id="title"></div>
-            </div>
+            <svg data-arg="widget-icon"><use xlink:href="#i-barChart"/></svg>
             <div data-arg="widget-content">
                 <div data-montage-id="chart-live"></div>
             </div>
