--- a/ui/controls/labeled-icon.reel/labeled-icon.html
+++ b/ui/controls/labeled-icon.reel/labeled-icon.html
@@ -11,7 +11,7 @@
             }
         },
         "label": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "label"}
             },
