--- a/ui/controls/table.reel/table.html
+++ b/ui/controls/table.reel/table.html
@@ -26,7 +26,7 @@
             }
         },
         "label": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "label"}
             },
