--- a/ui/controls/tree-view.reel/child-node.reel/child-node.html
+++ b/ui/controls/tree-view.reel/child-node.reel/child-node.html
@@ -23,7 +23,7 @@
             }
         },
         "name": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "name"}
             },
