--- a/ui/controls/tree-view.reel/tree-view.html
+++ b/ui/controls/tree-view.reel/tree-view.html
@@ -17,7 +17,7 @@
             }
         },
         "currentNodeName": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "currentNodeName"}
             },
