--- a/ui/dashboard/widget-dropzone.reel/widget-dropzone.html
+++ b/ui/dashboard/widget-dropzone.reel/widget-dropzone.html
@@ -66,7 +66,7 @@
         },
 
         "emptyMessageTitle": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "emptyMessageTitle"}
             },
