--- a/ui/drawer.reel/drawer.html
+++ b/ui/drawer.reel/drawer.html
@@ -14,6 +14,13 @@
                 "sideBoardWidgets": {"<-": "@owner.currentUser.attributes.sideBoardContext.widgets"}
             }
         },
+        "title": {
+            "prototype": "blue-shark/ui/text.reel",
+            "properties": {
+                "element": {"#": "title"},
+                "value": "Drag to add widgets"
+            }
+        },
         "horizontalScroll": {
             "prototype": "blue-shark/ui/scrollview.reel",
             "properties": {
@@ -59,7 +66,7 @@
 <body>
     <div data-montage-id="owner" class="Drawer">
         <header>
-            <h1 class="Drawer-title">Drag to add widgets</h1>
+            <h1 data-montage-id="title" class="Drawer-title"></h1>
             <button data-montage-id="closeButton" class="Button--create"></button>
         </header>
         <div class="DrawerContent">
