--- a/ui/inspectors/calendar.reel/calendar-widget.reel/calendar-event.reel/calendar-event.html
+++ b/ui/inspectors/calendar.reel/calendar-widget.reel/calendar-event.reel/calendar-event.html
@@ -15,7 +15,7 @@
             }
         },
         "name": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "name"}
             },
