--- a/ui/inspectors/calendar.reel/calendar-widget.reel/calendar-widget-day.reel/calendar-widget-day.html
+++ b/ui/inspectors/calendar.reel/calendar-widget.reel/calendar-widget-day.reel/calendar-widget-day.html
@@ -28,7 +28,7 @@
             ]
         },
         "date": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "date"}
             },
