--- a/ui/inspectors/calendar.reel/calendar-widget.reel/calendar-widget-task.reel/calendar-widget-task.html
+++ b/ui/inspectors/calendar.reel/calendar-widget.reel/calendar-widget-task.reel/calendar-widget-task.html
@@ -15,7 +15,7 @@
             }
         },
         "title": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "title"}
             },
