--- a/ui/main-sidebar/main-navigation.reel/main-navigation-item.reel/main-navigation-item.html
+++ b/ui/main-sidebar/main-navigation.reel/main-navigation-item.reel/main-navigation-item.html
@@ -16,7 +16,7 @@
         },
 
         "label": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "label"}
             },
