--- a/ui/main-sidebar/main-sidebar.reel/main-sidebar.html
+++ b/ui/main-sidebar/main-sidebar.reel/main-sidebar.html
@@ -41,7 +41,7 @@
             }
         },
         "username": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "username"}
             },
@@ -49,25 +49,49 @@
                 "value": {"<-": "@owner.application.sessionService.session.username"}
             }
         },
+        "logout": {
+            "prototype": "blue-shark/ui/button.reel",
+            "properties": {
+                "element": {"#": "logout"},
+                "value": "Logout",
+                "hasTemplate": false
+            }
+        },
+        "logoutLabel": {
+            "prototype": "blue-shark/ui/text.reel",
+            "properties": {
+                "element": {"#": "logoutLabel"},
+                "value": "Logout"
+            }
+        },
         "reboot": {
-            "prototype": "montage/ui/button.reel",
+            "prototype": "blue-shark/ui/button.reel",
             "properties": {
                 "element": {"#": "reboot"},
-                "label": "Reboot"
+                "value": "Reboot",
+                "hasTemplate": false
+            }
+        },
+        "rebootLabel": {
+            "prototype": "blue-shark/ui/text.reel",
+            "properties": {
+                "element": {"#": "rebootLabel"},
+                "value": "Reboot"
             }
         },
         "shutdown": {
-            "prototype": "montage/ui/button.reel",
+            "prototype": "blue-shark/ui/button.reel",
             "properties": {
                 "element": {"#": "shutdown"},
-                "label": "Shutdown"
+                "value": "Shutdown",
+                "hasTemplate": false
             }
         },
-        "logout": {
-            "prototype": "montage/ui/button.reel",
+        "shutdownLabel": {
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
-                "element": {"#": "logout"},
-                "label": "Logout"
+                "element": {"#": "shutdownLabel"},
+                "value": "Shutdown"
             }
         },
         "globalActionsButton": {
@@ -77,7 +101,7 @@
             }
         },
         "confirmationMessage": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "confirmationMessage"}
             },
@@ -118,9 +142,9 @@
                 <svg><use xlink:href="#i-power"/></svg>
             </div>
             <ul class="MainSidebar-globalActions-options">
-                <li><button data-montage-id="logout"></button></li>
-                <li><button data-montage-id="reboot"></button></li>
-                <li><button data-montage-id="shutdown"></button></li>
+                <li><button data-montage-id="logout"><span data-montage-id="logoutLabel"></span></button></li>
+                <li><button data-montage-id="reboot"><span data-montage-id="rebootLabel"></span></button></li>
+                <li><button data-montage-id="shutdown"><span data-montage-id="shutdownLabel"></span></button></li>
             </ul>
             <div class="MainSidebar-confirmation">
                 <div data-montage-id="confirmationMessage" class="MainSidebar-confirmation-message"></div>
