--- a/ui/sections/accounts/inspectors/accounts-list-options.reel/accounts-list-options.html
+++ b/ui/sections/accounts/inspectors/accounts-list-options.reel/accounts-list-options.html
@@ -10,6 +10,13 @@
                 "showSubLabel": false
             }
         },
+        "label": {
+            "prototype": "blue-shark/ui/text.reel",
+            "properties": {
+                "element": {"#": "label"},
+                "value": "Show domains"
+            }
+        },
         "checkbox": {
             "prototype": "blue-shark/ui/toggle-switch.reel",
             "properties": {
@@ -25,7 +32,7 @@
 </head>
 <body>
     <div data-montage-id="owner" class="UserListOptions flex-row flex-spaceBetween flex-align--center">
-        <span>Show domains</span>
+        <span data-montage-id="label"></span>
         <div data-montage-id="checkbox" class="Checkbox--light"></div>
     </div>
 </body>
