--- a/ui/sections/containers/controls/table-settings.reel/table-row-settings.reel/table-row-settings.html
+++ b/ui/sections/containers/controls/table-settings.reel/table-row-settings.reel/table-row-settings.html
@@ -12,7 +12,7 @@
         },
 
         "variable": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "variable"}
             },
