--- a/ui/sections/system/inspectors/boot-pool.reel/size-cell.reel/size-cell.html
+++ b/ui/sections/system/inspectors/boot-pool.reel/size-cell.reel/size-cell.html
@@ -14,7 +14,7 @@
             "prototype": "montage/core/converter/bytes-converter"
         },
         "size": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "size"},
                 "converter": {"@": "bytesSizeConverter"}
