--- a/ui/sign-in.reel/sign-in.html
+++ b/ui/sign-in.reel/sign-in.html
@@ -24,12 +24,10 @@
         },
 
         "infoText": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
-                "element": {"#": "infoText"}
-            },
-            "bindings": {
-                "value": {"<-": "'Enter your username and password.'"}
+                "element": {"#": "infoText"},
+                "value": "Enter your username and password."
             }
         },
 
@@ -57,7 +55,7 @@
         },
 
         "errorMessage": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "errorMessage"}
             },
@@ -79,7 +77,7 @@
         },
 
         "browserMessage": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "browserMessage"},
                 "value": "We're sorry but at this time FreeNAS only supports the Chrome browser."
