--- a/ui/widgets/alerts.reel/alerts.html
+++ b/ui/widgets/alerts.reel/alerts.html
@@ -19,6 +19,14 @@
                 "element": {"#": "widget"}
             }
         },
+        "title": {
+            "prototype": "blue-shark/ui/text.reel",
+            "properties": {
+                "element": {"#": "title"},
+                "value": "Alerts"
+            }
+        },
+
         "notifications": {
             "prototype": "ui/dashboard/notifications.reel",
             "properties": {
@@ -48,7 +56,7 @@
         <div data-montage-id="widget">
             <div data-arg="widget-title">
                 <svg data-montage-id="icon" class="Notifications-icon"><use xlink:href="#i-alert"/></svg>
-                <div data-montage-id="title" class="Notifications-title">Alerts</div>
+                <div data-montage-id="title" class="Notifications-title"></div>
                 <button data-montage-id="clear" class="Notifications-clear"></button>
             </div>
             <div data-arg="widget-content" data-montage-id="notifications"></div>
