--- a/ui/widgets/composite-temperature.reel/composite-temperature.html
+++ b/ui/widgets/composite-temperature.reel/composite-temperature.html
@@ -13,14 +13,8 @@
         "widget": {
             "prototype": "ui/dashboard/widgets/widget.reel",
             "properties": {
-                "element": {"#": "widget"}
-            }
-        },
-        "text": {
-            "prototype": "montage/ui/text.reel",
-            "properties": {
-                "element": {"#": "title"},
-                "value": "Composite Temperature"
+                "element": {"#": "widget"},
+                "title": "Composite Temperature"
             }
         },
         "chart": {
@@ -40,10 +34,7 @@
 <body>
     <div data-montage-id="owner" class="CompositeTemperature">
         <div data-montage-id="widget">
-            <div data-arg="widget-title">
-                <svg><use xlink:href="#i-barChart"/></svg>
-                <div data-montage-id="title"></div>
-            </div>
+            <svg data-arg="widget-icon"><use xlink:href="#i-barChart"/></svg>
             <div data-arg="widget-content">
                 <div><div data-montage-id="chart"></div></div>
             </div>
