--- a/ui/widgets/load-average.reel/load-average.html
+++ b/ui/widgets/load-average.reel/load-average.html
@@ -12,7 +12,8 @@
         "widget": {
             "prototype": "ui/dashboard/widgets/widget.reel",
             "properties": {
-                "element": {"#": "widget"}
+                "element": {"#": "widget"},
+                "title": "Load Average"
             }
         },
         "chart": {
@@ -41,10 +42,7 @@
 <body>
     <div data-montage-id="owner">
         <div data-montage-id="widget">
-            <div data-arg="widget-title">
-                <svg><use xlink:href="#i-lineChart"/></svg>
-                Load Average
-            </div>
+            <svg data-arg="widget-icon"><use xlink:href="#i-lineChart"/></svg>
             <div data-arg="widget-content">
                 <div data-montage-id="chart-live"></div>
             </div>
