--- a/ui/widgets/tasks.reel/tasks.html
+++ b/ui/widgets/tasks.reel/tasks.html
@@ -10,6 +10,13 @@
             }
         },
 
+        "widget": {
+            "prototype": "ui/dashboard/widgets/widget.reel",
+            "properties": {
+                "element": {"#": "widget"},
+                "title": "Tasks"
+            }
+        },
         "notifications": {
             "prototype": "ui/dashboard/notifications.reel",
             "properties": {
@@ -20,13 +27,6 @@
             "bindings": {
                 "notifications": {"<-": "@owner.tasks.filter{!parent}.sorted{id}.reversed()"}
             }
-        },
-
-        "widget": {
-            "prototype": "ui/dashboard/widgets/widget.reel",
-            "properties": {
-                "element": {"#": "widget"}
-            }
         }
     }
     </script>
@@ -34,10 +34,7 @@
 <body>
     <div data-montage-id="owner" class="Tasks">
          <div data-montage-id="widget">
-            <div data-arg="widget-title">
-                <svg data-montage-id="icon" class="Notifications-icon"><use xlink:href="#i-tasks"/></svg>
-                <div data-montage-id="title" class="Notifications-title">Tasks</div>
-            </div>
+             <svg data-arg="widget-icon" class="Notifications-icon"><use xlink:href="#i-tasks"/></svg>
             <div data-arg="widget-content" data-montage-id="notifications"></div>
         </div>
     </div>
